# routes/index.js
@@ -1,6 +1,3 @@
-const passport = require('passport');
-const { route } = require('./swagger');
-
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
@@ -8,16 +5,5 @@ router.use('/', require('./swagger'));
 router.use('/movies', require('./movies'));
 
 router.use('/animes', require('./animes'));
-
-router.get('/login', passport.authenticate('github'), (req, res) => {});
-
-router.get('/logout', function(req, res, next) {
-    req.logout(function(err) {
-        if(err) {
-            return next(err);
-        }
-        res.redirect('/');
-    });
-});
 
 module.exports = router;
